@startuml
'https://plantuml.com/class-diagram

object main
interface IDisplay {
    {abstract}Open()
	{abstract}Print()
	{abstract}Close()
}
abstract class Display {
    i DisplayIface
    Show()
}
note right of Display::i
    Open()
    for i := 0; i < 5; i++ {
        Print()
    }
    Close()
end note
class CharDisplay {
    Display
    Open()
	Print()
	Close()
}
class StringDisplay {
    Display
    Open()
	Print()
	Close()
    printLine()
}

main -> Display: Uses >
IDisplay <--o Display
Display <|-- CharDisplay
Display <|-- StringDisplay

@enduml